--- a/WebContent/nbproject/project.properties
+++ b/WebContent/nbproject/project.properties
@@ -1,5 +1,12 @@
+browser.autorefresh.SL__Browsers_ChromeBrowser=true
+browser.highlightselection.SL__Browsers_ChromeBrowser=true
 config.folder=
+external.project.url=
+file.reference.strawsburgdevelopment-WebContent=.
 file.reference.strawsburgdevelopment2-WebContent=.
 files.encoding=UTF-8
-site.root.folder=${file.reference.strawsburgdevelopment2-WebContent}
+server=INTERNAL
+site.root.folder=${file.reference.strawsburgdevelopment-WebContent}
+start.file=index.html
 test.folder=
+web.context.root=/WebContent
